[package]
name = "shunyadb"
version = "0.1.0"
edition = "2024"

[lib]
name = "shunyadb"
path = "src/lib.rs"

[[bin]]
name = "shunyadb-cli"
path = "src/main.rs"

[dependencies]
lru = "0.12"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
clap = { version = "4", features = ["derive"] }
anyhow = "1.0"
