[package]
name = "shunyadb"
version = "0.1.0"
edition = "2024"

[lib]
name = "shunyadb"
path = "src/lib.rs"

[[bin]]
name = "shunyadb"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
crc32fast = "1.3"
anyhow = "1.0"
once_cell = "1.18"
ordered-float = { version = "3.4", features = ["serde"] }
serial_test = "2.0"
tempfile = "3.5"
serde_json = "1.0.145"
